--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                 <p class="font-inter text-lg text-[#03071299] fc">Coach-009-WEB ! AC_Business</p>
                             </div>
                         </div>
-                        <button class="btn border-2 border-[#1DD100] bg-[#1dd1001a] font-bold text-lg text-[#1DD100]"><img class="border-2 border-dashed" src="./images/seat-green.png
+                        <button class="btn font-inter  border-2 border-[#1DD100] bg-[#1dd1001a] font-bold text-lg text-[#1DD100]"><img class="border-2 border-dashed" src="./images/seat-green.png
                             " alt="bus-icon"> <span id="seats-left">40</span> Seats left</button> 
                 </div>
                 <div class=" bg-[#F7F8F8] rounded-3xl lg:px-8 pb-8 mb-8"> 
@@ -316,17 +316,17 @@
               </div>
             </div>
 
-            <section id="success" class= "rounded-lg bg-[#F7F8F8] my-10 p-80 absolute top-[20%] left-[10%] hidden">
-              <div class="flex flex-col items-center space-y-7 py-24 px-8 rounded-2xl bg-white">
+            <section id="success" class= "rounded-lg bg-[#F7F8F8] my-10 lg:p-80 absolute bottom-[5%] lg:top-[20%] lg:left-[10%] hidden">
+              <div class="flex flex-col items-center space-y-7 lg:py-24 lg:px-8 rounded-2xl bg-white">
                 <img class="" src="./images/success.png" alt="">
-                <h1 class=" text-[#27AE60] px-36 font-bold text-2xl">SUCCESS</h1>
+                <h1 class=" text-[#27AE60] lg:px-36 font-bold text-2xl">SUCCESS</h1>
                <div class=" text-center">
                 <p class="text-xl font-semibold">Thank you for Booking Our Bus Seats.</p>
                 <p class="text-xl font-semibold my-3 ">We are working hard to find the best service and deals for you.</p>
                 <p class="text-[#4A4A4A] font-light"> Shortly you will find a confirmation in your email.</p>
                </div>
                 <div class="">
-                  <button id="continue" class=" px-14 btn text-white bg-[#27AE60] rounded-3xl">Continue</button></div>
+                  <button id="continue" class=" lg:px-14 btn text-white bg-[#27AE60] rounded-3xl">Continue</button></div>
               </div>
             </section>
         </section>
